2007-05-06  Simon Budig  <simon@gimp.org>

	* tools/pdbgen/pdb/edit.pdb: make gimp-edit-paste-as-new not fail
	at an empty clipboard, but return -1 as image id.

	* app/pdb/edit_cmds.c
	* libgimp/gimpedit_pdb.c: regenerated.

	* plug-ins/script-fu/scripts/paste-as-brush.scm
	* plug-ins/script-fu/scripts/paste-as-pattern.scm: Changed
	accordingly, fixes bug #357059.

	* modules/controller_linux_input.c: changed some axis names to make
	more sense.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* po-*/Makefile.in.in: reverted last change, it didn't work.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* po-*/Makefile.in.in: include po/Makefile.in.in and override
	@GETTEXT_PACKAGE@ instead of keeping five copies.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* HACKING: suggest to use pango-1-16.

	* configure.in: added --enable-gtk-doc-app option and an automake
	conditional for it.
	
	* devel-docs/Makefile.am: build the app directory conditionally.

	* devel-docs/app/Makefile.am: override disthook since we don't
	want to distribute any generated files.

2007-05-05  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/app.pl (generate_pspec): use $flags and not a
	literal GIMP_PARAM_READWRITE for the image paramspec's flags.

	* app/pdb/image_cmds.c: regenerated.

2007-05-05  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.c (convolve_region): instead of just
	copying the border pixels, convolute the full region and extend
	the borders.

	* app/paint/gimpconvolve.[ch]: removed broken code that used to
	deal with the image borders. Fixes bug #434279. Also reduced the
	matrix sizes to 3x3 as only the inner 3x3 values were nonzero.

2007-05-05  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/papertile.c: whitespace cleanup, tabs -> spaces.

2007-05-05  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* configure.in: Added 'fa' (Persian) to ALL_LINGUAS.

2007-05-05  Sven Neumann  <sven@gimp.org>

	* app/base/gimplut.[ch]
	* app/tools/gimpcurvestool.c